--- a/styles/style.css
+++ b/styles/style.css
@@ -272,13 +272,13 @@ input#wizard-app-id > button {
 #popup {
     display: none;
     width: 50%;
-    height: 200px;
+    min-height: 200px;
     background-color: #fff;
     box-shadow: 1px 1px gainsboro;
     position: absolute;
-    top: 10px;
+    top: 50%;
     left: 50%;
-    transform: translateX(-25%);
+    transform: translate(-50%, -70%);
     z-index: 1;
     margin: 15px;
     padding: 15px;
