--- a/styles/style.css
+++ b/styles/style.css
@@ -280,6 +280,20 @@ input#wizard-app-id > button {
     padding: 15px;
 }
 
+#error-message {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    min-height: 400px;
+    background-color: #fff;
+    box-shadow: 1px 1px gainsboro;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    z-index: 1;
+}
+
 #invite-code {
     word-wrap: break-word;
     padding-top: 10px;
@@ -294,11 +308,35 @@ input#wizard-app-id > button {
 }
 
 #overlay {
+    display: none;
     width: 100%;
     height: 100%;
     background-color: #55585d78;
     position: absolute;
     left: 0;
     top: 0;
-    display: none;
+}
+
+#error-message + #overlay {
+    display: block;
+}
+
+.top {
+    background-color: #F9065F;
+    flex: 1;
+    height: 50;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50;
+    flex: 1;
+    margin-top: 15px;
+}
+
+.bottom #retry {
+    margin-top: 15px;
+    width: 50%;
 }
