--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,46 @@ input#username {
     border-bottom: 1px solid #F9065F;
 }
 
+/**************************FONTELLO*************************/
+@font-face {
+    font-family: 'fontello';
+    src: url('./font/fontello.eot?47718871');
+    src: url('./font/fontello.eot?47718871#iefix') format('embedded-opentype'),
+         url('./font/fontello.woff2?47718871') format('woff2'),
+         url('./font/fontello.woff?47718871') format('woff'),
+         url('./font/fontello.ttf?47718871') format('truetype'),
+         url('./font/fontello.svg?47718871#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+   
+   [class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+   
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+   
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+   
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+    margin-left: .2em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-down-open:before { 
+      content: '\e800';
+    } /* '' */
+
 /********************** side Blockparties ******************/
 
 .SplitMainView {
@@ -282,9 +322,21 @@ div.wrapper {
 
 .selection {
     display: flex;
+    position: relative;
     flex-direction: column;
     width: 100%;
 }
+
+.selection:before {
+    font-family: fontello;
+    content: "\e800";
+    font-size: 17px;
+    position: absolute;
+    right: 15px;
+    top: 10px;
+    color: black;
+    pointer-events: none;
+  }
 
 .button-group {
     display: flex;
@@ -305,7 +357,7 @@ select {
     height: 40px;
     border: 1px solid #F9065F;
     padding-left: 10px;
-
+    cursor: pointer;
   }
 
 input#wizard-app-id, input#wizard-api-key, input#invite-code {
