--- a/styles/style.css
+++ b/styles/style.css
@@ -127,6 +127,7 @@ input#username {
 
 .SplitWindow {
     display: flex;
+    width: 100%
 }
 
 .MainWindow {
@@ -287,19 +288,19 @@ div.welcome section {
 /***************wizard******************/
 
 .wizard-page {
-    position: fixed;
     background: url('img/frame.png');
     background-size: cover;
-    top: 0;
-    z-index: -1;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#wizard-view {
+    width: 100%;
 }
 
 div.wrapper {
